tests/fixtures/invalid/void_local_object.c
int main(void) {
    void value;
    return 0;
}
